Hey, it actually crafts now
- Fixed lastRecipe caching not really working
- Changed the name inside of the autocrafter to be "autocrafter"
- Removed some Stream API nonsense